@@ -1,0 +1,51 @@
+/*
+ * ====================================================================
+ * Copyright (c) 2005 Sventon Project. All rights reserved.
+ *
+ * This software is licensed as described in the file LICENSE, which
+ * you should have received as part of this distribution. The terms
+ * are also available at http://sventon.berlios.de.
+ * If newer versions of this license are posted there, you may use a
+ * newer version instead, at your option.
+ * ====================================================================
+ */
+package de.berlios.sventon.ctrl;
+
+import de.berlios.sventon.command.SVNBaseCommand;
+import de.berlios.sventon.svnsupport.SventonException;
+import org.springframework.validation.BindException;
+import org.springframework.web.servlet.ModelAndView;
+import org.springframework.web.servlet.mvc.Controller;
+import org.tmatesoft.svn.core.SVNException;
+import org.tmatesoft.svn.core.io.SVNRepository;
+import org.tmatesoft.svn.core.wc.SVNRevision;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.util.HashMap;
+import java.util.Map;
+
+/**
+ * ShowLockController.
+ *
+ * @author jesper@users.berlios.de
+ */
+public class ShowLockController extends AbstractSVNTemplateController implements Controller {
+
+  /**
+   * {@inheritDoc}
+   */
+  protected ModelAndView svnHandle(SVNRepository repository, SVNBaseCommand svnCommand, SVNRevision revision,
+                                   HttpServletRequest request, HttpServletResponse response, BindException exception) throws SventonException, SVNException {
+
+    // Update trailing / for path
+    if (!svnCommand.getPath().endsWith("/")) {
+      svnCommand.setPath(svnCommand.getPath() + "/");
+    }
+
+    Map<String, Object> model = new HashMap<String, Object>();
+    model.put("currentLocks", getLocks(repository, svnCommand.getPath()).values());
+    return new ModelAndView("showlock", model);
+  }
+
+}
